<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorGrey400"
    android:padding="@dimen/spacing_large">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:src="@drawable/logo" />

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/colorWhite">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="@dimen/spacing_large">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_nickname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/spacing_small"
                android:textAlignment="viewStart"
                app:hintAnimationEnabled="true">

                <EditText
                    android:id="@+id/nickname_text_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/nickname" />
            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/easy_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/spacing_small"
                android:background="@color/colorAccent"
                android:text="@string/easy"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/text_size_large" />

            <Button
                android:id="@+id/normal_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/spacing_small"
                android:background="@color/colorAccent"
                android:text="@string/normal"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/text_size_large" />

            <Button
                android:id="@+id/hard_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/spacing_small"
                android:background="@color/colorAccent"
                android:text="@string/hard"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/text_size_large" />

            <Button
                android:id="@+id/insane_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/spacing_small"
                android:background="@color/colorAccent"
                android:text="@string/insane"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/text_size_large" />
        </LinearLayout>
    </android.support.v7.widget.CardView>
</RelativeLayout>